--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -44,12 +44,13 @@
 <body>
 <div class="login-form">
   <form action="/login" method="post">
+    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
     <h2 class="text-center">Log in</h2>
     <div class="form-group">
-      <input type="text" name="username" class="form-control" placeholder="Username">
+      <input type="text" name="username" class="form-control" placeholder="Username" autocomplete="username">
     </div>
     <div class="form-group" >
-      <input type="password" name="password" class="form-control" placeholder="Password">
+      <input type="password" name="password" class="form-control" placeholder="Password" autocomplete="current-password">
     </div>
     <div class="form-group">
       <button type="submit" class="btn btn-primary btn-block">Log in</button>
